- dao delete() and update() for obj removed; - create() and update() Comment now accept feedbackId and text; - FeedbackDaoImpl implements it's own interface; - get() service implemented; - small fixes and tests updates